--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>🤖 Yaswanth's Personal Site</title>
+    <title>🖳 Yaswanth's CV</title>
   </head>
 <body>
 <table cellspacing="20">
     <tr>
       <td><img src="images/cc.png" alt="If Image Doesn't Load, Don't Worry, It's Just my Picture"style="width:100px;height:100px;"><br></td>
-      <td><h1>Adakalam Yaswanth</h1><p>Struggling through the hardest times of my life.</p></td>
+      <td><h1>Adakalam Yaswanth</h1><p>I'm a person looking to improve skills in my domain ASAP, Struggling through the hardest times of my life.</p></td>
     </tr>
 </table>
 <hr>
@@ -16,6 +16,7 @@
     <ul>
     <li><em><strong>B.Tech(CSE)</strong> from <strong><a href="https://kmit.in/">KMIT</a></strong>.</em></li></a>
     <li><em><strong>Diploma (EEE)</strong> from <strong><a href="https://en.wikipedia.org/wiki/TRR_College_of_Engineering">TRRC</a></strong>.</em></li>
+    <li><em><strong>SSC</strong> from <strong>Oxford Talent High School</em></li>
     </ul>
     <h3>Work Experience</h3>
     <table border="1">
@@ -38,7 +39,7 @@
     </table><br>
   <hr>
     <h3><u>Skills</u></h3>
-    <table cellspacing="20">
+    <table cellspacing="10">
           <tr>
             <td>Communication Skills</td>
             <td>★★★★</td>
@@ -52,8 +53,16 @@
           <td>★★</td>
         </tr>
         <tr>
-          <td>DBMS</td>
+          <td>Databases</td>
           <td>★★★</td>
+        </tr>
+        <tr>
+          <td>Photoshop</td>
+          <td>★★★★</td>
+        </tr>
+        <tr>
+          <td>Typing</td>
+          <td>★★★★</td>
         </tr>
   </table><br>
 <hr>
