--- a/contactdetails.html
+++ b/contactdetails.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>Address</h3>
@@ -13,7 +14,6 @@
     <li>Phone: +91-8500630467</li>
     <li>Email: Yashwanth986@gmail.com</li>
     </ul>
-<h3>Contact me through below Form</h3>
 <form action="mailto:yashwanth986@gmail.com" method="post" enctype="text/plain">
   <label>Your Name:</label>
   <input type="text" name="Your Name"><br>
